integrated google ads to the app
